<package format="2">
    <name>cmd_vel_pub</name>
    <version>1.0.0</version>
    <description>cmd_vel_pub topic package</description>
    <maintainer email="jshackist@gmail.com">engineerJPark</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>